<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.xharlock</groupId>
	<artifactId>holobot</artifactId>
	<version>2.2.8</version>
	<name>HoloBot</name>
	<description>Java Discord Bot</description>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>16</maven.compiler.source>
		<maven.compiler.target>16</maven.compiler.target>
		<java.version>16</java.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>Bootstrap</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>16</source>
					<target>16</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- NanoJikan - A lightweight package for using Jikan API -->
		<dependency>
			<groupId>com.xharlock</groupId>
			<artifactId>nanojikan</artifactId>
			<version>0.0.12</version>
		</dependency>

		<!-- PokeAPI4Java - A lightweight package for using the PokeAPI -->
		<dependency>
			<groupId>com.xharlock</groupId>
			<artifactId>pokeapi4java</artifactId>
			<version>0.0.5</version>
		</dependency>

		<!-- Core of the bot -->
		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>5.0.0-alpha.11</version>
		</dependency>

		<!-- Useful stuff for JDA -->
		<dependency>
			<groupId>com.jagrosh</groupId>
			<artifactId>jda-utilities</artifactId>
			<version>3.0.5</version>
			<scope>compile</scope>
			<type>pom</type>
		</dependency>

		<!-- Gson to work with json objects -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.9.0</version>
		</dependency>

		<!-- Guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.1-jre</version>
		</dependency>


		<!-- Akinator API wrapper -->
		<dependency>
			<groupId>com.github.markozajc</groupId>
			<artifactId>akiwrapper</artifactId>
			<version>1.5.1.2</version>
		</dependency>

		<!-- LavaPlayer -->
		<dependency>
			<groupId>com.sedmelluq</groupId>
			<artifactId>lavaplayer</artifactId>
			<version>1.3.78</version>
		</dependency>

		<!-- Java Database Connectivity -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.36.0.3</version>
		</dependency>

		<!-- Logger Stuff -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.11</version>
		</dependency>

		<!-- JLyrics to browse lyrics and song information -->
		<dependency>
			<groupId>com.jagrosh</groupId>
			<artifactId>JLyrics</artifactId>
			<version>0.3</version>
		</dependency>

		<!-- Plugins that extend the number of formats supported by ImageIO -->
		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-jpeg</artifactId>
			<version>3.8.2</version>
		</dependency>
		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-tiff</artifactId>
			<version>3.8.2</version>
		</dependency>

		<!-- Library used to validate url and email -->
		<dependency>
			<groupId>commons-validator</groupId>
			<artifactId>commons-validator</artifactId>
			<version>1.7</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.14.3</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.15</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.13</version>
		</dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
	</dependencies>

	<repositories>
		<!-- Repository for JDA -->
		<repository>
			<id>dv8tion</id>
			<name>m2-dv8tion</name>
			<url>https://m2.dv8tion.net/releases</url>
		</repository>

		<!-- Used by various dependencies -->
		<repository>
			<id>jcenter</id>
			<name>jcenter-bintray</name>
			<url>https://jcenter.bintray.com</url>
		</repository>

		<!-- Required to test experimental JDA builds -->
		<repository>
			<id>jitpack</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub xHarlock Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/xharlock/holobot</url>
		</repository>
	</distributionManagement>
</project>